@@ -7,10 +7,10 @@ AUX jack2-no-self-connect-1.9.9.5.patch 19308 SHA256 4e7fa1fb68025f68df7fe8c690f
 DIST jack-1.9.9.5.tar.bz2 4673914 SHA256 65ef5acceabb1ebd4ac8c437be47a522292e3c2a1f7bfa656de7392d9351ebbd SHA512 173a10943c98cb17f0041216cc24ce03d5e147f27be121fdf66c4e9d21ba8bf125a1749b985cacffb075618d92025231eb047c754d33d777275373d010a85e27 WHIRLPOOL c6ec9ab4ed29ad67364b4ea3c74bc0bcfb9590fe778820be6a9c5247ecb7f6dc3d894599ce6ac7c27a4243fd77308b4345c2479d1567927247df233165bd6641
 DIST jack-audio-connection-kit-0.121.3-dbus.patch 337061 SHA256 da12003ed4528a09d8109ecc7e75f539f0173b23832a1d993800473f1f1d25fd SHA512 9be280a24d59d35bab07da75be407f0790fd36657bfb54d24522337f2a2bc15d6e8a9f88347ff3215ed3e6b32ab827c4e203f5435fefe30c456d638169524192 WHIRLPOOL 37b6a58c5103ff23e606e3dfd0b5ec2630b86f88ddb964635050555e64aa4ab687205e8e29add29659f36866d036098bb7d6128e230349adfd096c06cc641709
 DIST jack-audio-connection-kit-0.121.3.tar.gz 1083545 SHA256 b7095d3deabeecd19772b37241e89c6c79de6afd6c031ba7567513cfe51beafa SHA512 57323393d5209baefe73cc0cd9a0e818b1cfd260cf9aa36cd6ad800252e22e3ddb7fc46649c54b8e840696878147c2d06c8d39fd7300b5bb92aeb69f44ed710f WHIRLPOOL a256cfb7c3546cb06d6003313802b02812d8da9c13671be9b0341a10442cd348a8b3f7fe65e8d27cc47b4e29ded799fa6cc0efa51d81d01f342c7c8eefbc9c55
-EBUILD jack-audio-connection-kit-0.121.3.ebuild 2331 SHA256 5d31c09ab47b2b7b586710ce1165140f7683de9e75de30dd55388820529cf120 SHA512 e1614995b9a126ac4e576a128de164167d739f8e85eecb1e9908a575725f801b887b2803deb3d5ead3c959527f7bce3442d67a606da06f3a4bcc24a7d43974aa WHIRLPOOL bcf5e671b21106a56f2b18652f4986be40d3039f09f0cc03236f6aa5ca3967ecdd0b0098581271fbea754b8af8e057de4b1e0da89cb86a06ea1e26c31e9bf6c8
+EBUILD jack-audio-connection-kit-0.121.3.ebuild 2096 SHA256 3a7e32a387fb164f98a4560dec91c2146d84293832631ab51eb193d764f7ad70 SHA512 54d6fbd1ea9a4747fdd58bf90aecb87c80a812ff95992e0bd8ae42d0fc929d202248cd8e554f0e2d94150077e1160daf8321f733989ed687f062db40896a23a6 WHIRLPOOL 288352e28631240e9053c230e54fa572e66bc05f527dd3ffcd2ab7afb0980f296f0502999e8d8f36b38f9175520837a168d12608cff04d990615f38aa1681ea5
 EBUILD jack-audio-connection-kit-1.9.9.5-r1.ebuild 1711 SHA256 189a4439f9a9a4cd768c8c161bae7fcde64c4ef800bd6a242f19f13f752eaba0 SHA512 74dd56b3c22330c6a7ae08ae3a05df64b6ae2d093cdacfb303769736853338e6f5401ac2ebe4b925e02fb6c4164c4f6ed0daf6a5732588be7e728636fab937de WHIRLPOOL 5f6c758dfff15cebf708b471d4cf59637e7bb50209c296b0f8b46200baefe29fbb2591244254b8d141d7a376fcdad62d3e15c2c8f9d7adf76a89eb38b0e96087
 EBUILD jack-audio-connection-kit-1.9.9.5.ebuild 1768 SHA256 63f4fa5da558b2f002011d95f2204d21da492ec03e4688c33c6dfb564a4950f0 SHA512 2a1478b18edeccf01a3cb3e717c87ecdc6107b7aa182f89d535260c6a0ff454845180b3c3bb0126a52593a127e1202b81778bd32da1061f4c1516c05c700ca0d WHIRLPOOL 0a0da1b746c300a62653103e3aae44622d5c7fd387b6c3e9a7defe623949f2eed25a2857de5ee9f8e35ccf46b75954ae8218d33cd770009b6025854032004b15
 EBUILD jack-audio-connection-kit-1.9999.ebuild 1919 SHA256 84c209409988902c7d405d0554dfe4d5392661085db34fc56f4c6a640a237be8 SHA512 32e5a8f7fbfa57bd7637d0643d32792a0dbe5a3debd61d746cf29649c5b1348c9ccbe5864dff59183ea1fdb8bae185a201c593834776c731c26a68ab31942d95 WHIRLPOOL 0e97cc31f9d0c33014c4f0b2dab9a32777b2adb24aa50e76630b09d82083e8960241ca061b973e171b86177165f460d15cedbe17095d372062c38e4e05d809c1
 EBUILD jack-audio-connection-kit-2.9999.ebuild 1654 SHA256 038607120050fdab02458accc0ea407a0aeaafcc50de679e0467feb711fbb822 SHA512 e09a376b912748231c8dd5e88d20ea81aa7af4fdd6f1ec86529c0a44e1ee21b3e804ab51bfaaa2326fb4a2d14a10252af940374ef603a78c10b1f709adfce564 WHIRLPOOL 0f3abf3e8015707e417e93bcbe6adecd04fafef3bf0e471fd4f83403ec379b9e35f7c1bac059c2c60f979a9825e44a69114d50b175c874a391746e3d1331146f
-MISC ChangeLog 13305 SHA256 23521f44722bc1f5cc4a337504be0ca23ae7a88cdc4ae2bce522fff21fa8b58a SHA512 9ee3fc40d98795fb46e20f8a3b6970df29b020e426150818362fa3bfb11cfb56ee562dd8ec38420fc3b6c9910428cf12ab8911ed1d6cfdf9139784927604b698 WHIRLPOOL 97d67496e15deda5276d3a6316f2a21a97b40fe6d98dc66a1d19274c5dbb5cbe97a8952f039bfee93bc3c472f7335f6ed62e43f48d9d4888dd91deff4d012db3
+MISC ChangeLog 13586 SHA256 dd07dda20750402571b0d73c967a2b91ccbcde68c3127d6222c10f336ff60c4b SHA512 056352b243ca6940e477eb66c9e6e5422e2a92045980f6fc9117e89f1e57df8731257c012937e92b3359f0f64cf63ad097e13ffa038508f5026b4a4a0c0229f4 WHIRLPOOL 79c52e6d4154f969f171804c014b107a04fbfb7a512cf2d0cd546a3fed5c2f9f41c6055665076171b7318390499278556093e4e1dd0f92835670f7acf4efebd5
 MISC metadata.xml 936 SHA256 4451b4a0ee0e6b04e3da3a568eae48f4b3f2fe2abd8b7d423e7cdd5ace9a2006 SHA512 f3054f9e563f3234088d4302bca0d525e67c28d0cf0597fb13529c497ffa5e66abfb4c2f09f1157f8289d2695df6fd39cff4e5501af5a6c52d99ace3cde1ffc7 WHIRLPOOL 53a36456744f0f7a90831ac1c6d7309e00d14de491bc48f3530bf5ce04ceb89c9e71f1f14103e9bfb6abed0b0cc381ed6d60d93a012efa5a3dce97a6f7f3f28d
